# IB-Solana

./: .gitignore
2.1_startup_native/: Cargo.toml
2.1_startup_native/src/: lib.rs
2.2_startup_anchor/: Anchor.toml  Cargo.toml
2.2_startup_anchor/programs/a/: Cargo.toml
2.2_startup_anchor/programs/a/src/: lib.rs
2.2_startup_anchor/tests/: a.ts
2.3_startup_anchor_todo/: Anchor.toml
2.3_startup_anchor_todo/programs/anchor_todo/: Cargo.toml
2.3_startup_anchor_todo/programs/anchor_todo/src/: lib.rs
2.3_startup_anchor_todo/tests/: anchor_todo.ts
3_account_interaction/: Cargo.toml
3_account_interaction/src/: main.rs
5.1_token_contract/: Cargo.toml
5.1_token_contract/src/: instruction.rs  lib.rs  processor.rs
5.2_token_cli/: Cargo.toml
5.2_token_cli/src/: main.rs
5.2_token_cli/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
5.2_token_cli/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1751473616828303  MANIFEST-000021
6.1_social/: Cargo.toml
6.1_social/src/: instruction.rs  lib.rs  processor.rs  state.rs
6.2_social_cli/: Cargo.toml
6.2_social_cli/src/: main.rs
