cargo-features = ["edition2024"]

[package]
name = "token"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh = "1.5.7"
rand = "0.9.1"
solana-program = "2.3.0"
solana-system-interface = "1.0.0"
# 忽略入口文件
spl-associated-token-account = { version = "7.0.0", features = [
    "no-entrypoint",
] }
# 忽略入口文件
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
